Add account dashboard

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -17,6 +17,7 @@
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="all_years_dashboard.html"><i class="fa-solid fa-chart-bar mr-2"></i> All Years Dashboard</a></li>
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="monthly_dashboard.html"><i class="fa-solid fa-chart-column mr-2"></i> Monthly Dashboard</a></li>
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="group_dashboard.html"><i class="fa-solid fa-users mr-2"></i> Group Dashboard</a></li>
+      <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="account_dashboard.html"><i class="fa-solid fa-wallet mr-2"></i> Account Dashboard</a></li>
     </ul>
   </div>
 
