--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -33,7 +33,7 @@ let categoryTable;
 async function loadCategories() {
     const res = await fetch('../php_backend/public/categories.php');
     const cats = await res.json();
-    const data = cats.map(c => ({id: c.id, name: c.name, tags: c.tags.map(t => t.name).join(', ')}));
+    const data = cats.map(c => ({id: c.id, name: c.name, tags: c.tags.map(t => t.name)}));
     if (categoryTable) {
         categoryTable.setData(data);
         return;
@@ -42,8 +42,8 @@ async function loadCategories() {
         data: data,
         layout: 'fitColumns',
         columns: [
-            { title: 'Name', field: 'name' },
-            { title: 'Tags', field: 'tags' },
+            { title: 'Name', field: 'name', formatter: badgeFormatter('bg-green-200 text-green-800') },
+            { title: 'Tags', field: 'tags', formatter: badgeFormatter('bg-blue-200 text-blue-800') },
             { title: 'Actions', formatter: function(cell){
                 const c = cell.getRow().getData();
                 const container = document.createElement('div');
