--- a/frontend/tags.html
+++ b/frontend/tags.html
@@ -42,7 +42,7 @@ async function loadTags(){
         data: tags,
         layout: 'fitColumns',
         columns: [
-            { title: 'Name', field: 'name' },
+            { title: 'Name', field: 'name', formatter: badgeFormatter('bg-blue-200 text-blue-800') },
             { title: 'Keyword', field: 'keyword' },
             { title: 'Actions', formatter: function(cell){
                 const t = cell.getRow().getData();
