Add transfers overview and manual linking

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -34,6 +34,7 @@
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="monthly_statement.html"><i class="fa-solid fa-file-invoice-dollar mr-2"></i> View Monthly Statement</a></li>
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="report.html"><i class="fa-solid fa-table mr-2"></i> Transaction Reports</a></li>
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="search.html"><i class="fa-solid fa-magnifying-glass mr-2"></i> Search Transactions</a></li>
+      <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="transfers.html"><i class="fa-solid fa-right-left mr-2"></i> Transfers</a></li>
     </ul>
   </div>
 
