Add monthly category budgets with tracking

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -29,6 +29,13 @@
   </div>
 
   <div>
+    <h3 class="text-lg font-semibold mb-2">Budgets</h3>
+    <ul class="space-y-2">
+      <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="budgets.html"><i class="fa-solid fa-wallet mr-2"></i> Budgets</a></li>
+    </ul>
+  </div>
+
+  <div>
     <h3 class="text-lg font-semibold mb-2">Transactions</h3>
     <ul class="space-y-2">
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="monthly_statement.html"><i class="fa-solid fa-file-invoice-dollar mr-2"></i> View Monthly Statement</a></li>
