feat: add web backup and restore

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -60,6 +60,7 @@
     <ul class="space-y-2">
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="processes.html"><i class="fa-solid fa-gear mr-2"></i> Run Processes</a></li>
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="logs.html"><i class="fa-solid fa-clipboard-list mr-2"></i> View Logs</a></li>
+      <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="backup.html"><i class="fa-solid fa-database mr-2"></i> Backup &amp; Restore</a></li>
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="../users.php"><i class="fa-solid fa-user mr-2"></i> Manage Users</a></li>
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="../logout.php"><i class="fa-solid fa-right-from-bracket mr-2"></i> Logout</a></li>
     </ul>
